fix: uneven container item padding

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -621,8 +621,7 @@ form > .field--container {
 
 .field--container > ul > li,
 .field--container > ol > li {
-  padding-top: 0.5rem;
-  padding-bottom: 0.75rem;
+  padding-block: 0.5rem;
   border-top: 1px solid var(--separator-color);
   display: block;
 }
